--- a/templates/register.html
+++ b/templates/register.html
@@ -25,125 +25,151 @@
     <link rel="stylesheet" href="static/css/flaticon.css">
     <link rel="stylesheet" href="static/css/icomoon.css">
     <link rel="stylesheet" href="static/css/style.css">
-
-    <style>
-        .nav-item.dropdown:hover .dropdown-menu {
-            display: block;
-        }
-        .dropdown-item:hover {
-            background-color: #01d28e; /* Change the color as per your preference */
-        }
-    </style>
   </head>
 
-  <body>    
-	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light text-center" id="ftco-navbar">
+  <body>   
+      <style>
+        .navbar-nav li {
+          margin-left: 15px; /* Adjust the margin as needed for spacing */
+        }
+      </style>
+
+	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-dark py-4" id="ftco-navbar">
 	    <div class="container justify-content-center">
-	      <a class="navbar-brand" href="/">Aliong <span>Car</span>Book</a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
-      </div>
-
-      <div class="container-fluid">
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav">
-
-            {% if homeactive == True %}
-              <li class="nav-item active">
-            {% else %}
-              <li class="nav-item">
-            {% endif %}
-	          <a href="/" class="nav-link">Home</a></li>
-            
-            {% if aboutactive == True %}
-              <li class="nav-item active">
-            {% else %}
-              <li class="nav-item">
-            {% endif %}
-	          <a href="about" class="nav-link">About</a></li>
-
-
-            {% if servicesactive == True %}
-              <li class="nav-item active">
-            {% else %}
-              <li class="nav-item">
-            {% endif %}
-	          <a href="services" class="nav-link">Services</a></li>
-            
-            {% if caractive == True %}
-              <li class="nav-item active">
-            {% else %}
-              <li class="nav-item">
-            {% endif %}
-	          <a href="readcatalog" class="nav-link">Cars</a></li>
+            <a class="navbar-brand" href="/">Aliong <span>Car</span>Book</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="oi oi-menu"></span> Menu
+            </button>
+        </div>
+  
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="ftco-nav">
+              <ul class="navbar-nav">
+  
+              {% if homeactive == True %}
+                <li class="nav-item active">
+              {% else %}
+                <li class="nav-item">
+              {% endif %}
+                <a href="/" class="nav-link">Home</a></li>
               
-            {% if contactactive == True %}
-              <li class="nav-item active">
-            {% else %}
-              <li class="nav-item">
-            {% endif %}
-	          <a href="contact" class="nav-link">Contact</a></li>
-
-            
-            {% if session.username and session.roles == 'Admin' %}
-              {% if managecaractive == True %}
-                  <li class="nav-item dropdown active">
+              {% if aboutactive == True %}
+                <li class="nav-item active">
               {% else %}
-                  <li class="nav-item dropdown">
+                <li class="nav-item">
               {% endif %}
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCars" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Manage Cars Data
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownCars">
-                      <a class="dropdown-item" href="displaycardata">Display Cars</a>
-                      <a class="dropdown-item" href="createmobil">Insert Car</a>
-                  </div>
-              </li>
-
-              {% if carbookactive == True %}
-                  <li class="nav-item dropdown active">
+                <a href="about" class="nav-link">About</a></li>
+  
+              {% if session.username %}
+                {% if createactive == True %}
+                  <li class="nav-item active">
+                {% else %}
+                  <li class="nav-item">
+                {% endif %}
+                <a href="createmobil" class="nav-link">Insert_Car</a></li>
+              {% endif %}
+  
+  
+              {% if servicesactive == True %}
+                <li class="nav-item active">
               {% else %}
-                  <li class="nav-item dropdown">
+                <li class="nav-item">
               {% endif %}
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCars" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Car Book
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownCars">
-                      <a class="dropdown-item" href="confirmreturn">Confirmation Car Return</a>
-                      <a class="dropdown-item" href="#">Booking History</a>
-                  </div>
-              </li>
-            {% endif %}
-
-	        </ul>
-	      </div>
-      </div>
-
-        
-      <div class="container justify-content-center text-center">
-        {% if session.username %}
-          <h6 class="bg-dark aqua py-3 px-3 mb-0 rounded">
-            Welcome, {{session.username}} <br>
-            <a href="/logout" class="btn btn-danger mt-2">
-              LOGOUT
-            </a>
-          </h6>
-        {% else %}
-          <a class="navbar-brand btn btn-success" href="login">Login</a>
-          <a class="navbar-brand btn btn-primary" href="register">Register</a>
-        {% endif %}
-      </div>          
-        
-	    
+                <a href="services" class="nav-link">Services</a></li>
+              
+              {% if caractive == True %}
+                <li class="nav-item active">
+              {% else %}
+                <li class="nav-item">
+              {% endif %}
+                <a href="readcatalog" class="nav-link">Cars</a></li>
+                
+              {% if contactactive == True %}
+                <li class="nav-item active">
+              {% else %}
+                <li class="nav-item">
+              {% endif %}
+                <a href="contact" class="nav-link">Contact</a></li>
+  
+              </ul>
+            </div>
+        </div>
+  
+          
+        <div class="container justify-content-center text-center">
+          {% if session.username %}
+            <h5 class="bg-dark aqua py-3 px-2 mb-0 rounded">
+              Welcome, {{session.username}} <br>
+              <a href="/logout" class="btn btn-danger mt-2">
+                LOGOUT
+              </a>
+            </h5>
+          {% else %}
+            <a class="navbar-brand btn btn-success" href="login">Login</a>
+            <a class="navbar-brand btn btn-primary" href="register">Register</a>
+          {% endif %}
+        </div>   
 	  </nav>
     <!-- END nav -->
 
-    {% block content %}
+    <section class="content-header mt-3 mx-5">
+        {% for message in get_flashed_messages()%}
+    <div class="alert alert-info alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        {{ message }}
+    </div>
+        {% endfor%}
+    </section>
 
+    <section class="ftco-section login-section mt-0">
+        <div class="container gray p-5 login-form">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="detail-box">
+                    <div class="heading_container">
+                        <h2 class="text-center text-light">Register</h2>
+                    </div>
 
-
-    {% endblock %}
+                    <form action="/register" method="POST">
+                        <div class="form-group">
+                            <label for="inputAddress">Nama Lengkap</label>
+                            <input type="text" class="form-control" name='nama_lengkap' placeholder="Coriolanus Snow" required="'required">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress">Email</label>
+                            <input type="email" class="form-control" name='email' placeholder="coryo@gmail.com" required="'required">
+                        </div> 
+                        <div class="form-group">
+                            <label for="inputAddress">Username</label>
+                            <input type="text" class="form-control" name='username' placeholder="Coryo" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputRoles">Roles</label>
+                            <select class="form-control" name="roles" required="required">
+                                <option disabled selected>Pilih Roles</option>
+                                <option value="Customer">Customer</option>
+                                <option value="Admin">Admin</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputAddress">Password</label>
+                            <input type="password" class="form-control" name='password' required="required">
+                        </div>  
+                        <div class="form-group">
+                            <label for="inputAddress">Konfirmasi Password</label>
+                            <input type="password" class="form-control" name='konfirmasi' required="reqiured">
+                        </div>
+            
+                        <div class="text-center mt-4">
+                            <button type="submit" class="btn btn-primary">Register</button>
+                        </div>
+                    </form>
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <!-- Footer -->
     <footer class="ftco-footer ftco-bg-dark ftco-section">
