--- a/templates/confirm-return.html
+++ b/templates/confirm-return.html
@@ -31,7 +31,7 @@
                 <td>{{ booking[1] }}</td>
                 <td>{{ booking[2] }}</td>
                 <td>{{ booking[3] }}</td>
-                <td>{{ booking[4] }} Hari</td>
+                <td>{{ booking[4] }} hari</td>
                 <td>{{ booking[5] }}</td>
                 <td>{{ booking[10] }}</td>
                 <td><a class="btn btn-primary" href="/complete_booking/{{ booking[0] }}">Konfirmasi</a></td>
