--- a/templates/layout.html
+++ b/templates/layout.html
@@ -111,9 +111,18 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownCars">
                       <a class="dropdown-item" href="confirmreturn">Confirmation Car Return</a>
-                      <a class="dropdown-item" href="#">Booking History</a>
+                      <a class="dropdown-item" href="bookinglist">Booking / Transaction List</a>
                   </div>
               </li>
+            {% endif %}
+
+            {% if session.username and session.roles == 'Customer' %}
+              {% if mybookingactive == True %}
+                <li class="nav-item active">
+              {% else %}
+                <li class="nav-item">
+              {% endif %}
+                <a href="mybooking" class="nav-link">MyBooking</a></li>
             {% endif %}
 
 	        </ul>
