--- a/templates/secondlayout.html
+++ b/templates/secondlayout.html
@@ -108,13 +108,22 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCars">
                         <a class="dropdown-item" href="confirmreturn">Confirmation Car Return</a>
-                        <a class="dropdown-item" href="#">Booking History</a>
+                        <a class="dropdown-item" href="bookinglist">Booking History</a>
                     </div>
                 </li>
             {% endif %}
 
+            {% if session.username and session.roles == 'Customer' %}
+              {% if mybookingactive == True %}
+                <li class="nav-item active">
+              {% else %}
+                <li class="nav-item">
+              {% endif %}
+                <a href="mybooking" class="nav-link">MyBooking</a></li>
+            {% endif %}
+
             </ul>
-            </div>
+          </div>
         </div>
 
         
