Nambahin email blast, dan percantik sedikit

--- a/templates/secondlayout.html
+++ b/templates/secondlayout.html
@@ -109,6 +109,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCars">
                         <a class="dropdown-item" href="confirmreturn">Confirmation Car Return</a>
                         <a class="dropdown-item" href="bookinglist">Booking History</a>
+                        <a class="dropdown-item" href="emailblast">Send Newsletter</a>
                     </div>
                 </li>
             {% endif %}
