--- a/templates/layout.html
+++ b/templates/layout.html
@@ -112,6 +112,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownCars">
                       <a class="dropdown-item" href="confirmreturn">Confirmation Car Return</a>
                       <a class="dropdown-item" href="bookinglist">Booking / Transaction List</a>
+                      <a class="dropdown-item" href="emailblast">Send Newsletter</a>
                   </div>
               </li>
             {% endif %}
