--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-map-o"></span>
 			          	</div>
-			            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+			            <p><span>Address:</span>Jl. Imam Bonjol Permai Blok A3/27, Karawaci, Kec. Karawaci, Tangerang, Indonesia</p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
@@ -31,7 +31,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-mobile-phone"></span>
 			          	</div>
-			            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+			            <p><span>Phone:</span> <a href="tel://1234567920">+62 822 6372 8847</a></p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
@@ -39,7 +39,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-envelope-o"></span>
 			          	</div>
-			            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+			            <p><span>Email:</span> <a href="mailto:info@yoursite.com">aliongrental@gmail.com</a></p>
 			          </div>
 		          </div>
 		        </div>
@@ -65,11 +65,7 @@
           
           </div>
         </div>
-        <div class="row justify-content-center">
-        	<div class="col-md-12">
-        		<div id="map" class="bg-white"></div>
-        	</div>
-        </div>
+        
       </div>
     </section>
 	
