--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
           <div class="col-lg-8 ftco-animate">
           	<div class="text w-100 text-center mb-md-5 pb-md-5">
 	            <h1 class="mb-4">Fast &amp; Easy Way To Rent A Car</h1>
-	            <p style="font-size: 18px;">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts</p>
-	            <a href="https://vimeo.com/45830194" class="icon-wrap popup-vimeo d-flex align-items-center mt-4 justify-content-center">
+	            <p style="font-size: 18px;">Your trusted partner for car rental needs in Indonesia. Enjoy seamless booking, affordable rates, and excellent customer service.</p>
+	            <a href="https://www.youtube.com/watch?v=ee-VBP1aYXY" class="icon-wrap popup-vimeo d-flex align-items-center mt-4 justify-content-center">
 	            	<div class="icon d-flex align-items-center justify-content-center">
 	            		<span class="ion-ios-play"></span>
 	            	</div>
@@ -387,7 +387,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="60">0</strong>
+                <strong class="number" data-number="20">0</strong>
                 <span>Year <br>Experienced</span>
               </div>
             </div>
@@ -395,7 +395,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="1090">0</strong>
+                <strong class="number" data-number="1020">0</strong>
                 <span>Total <br>Cars</span>
               </div>
             </div>
@@ -403,7 +403,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="2590">0</strong>
+                <strong class="number" data-number="3237">0</strong>
                 <span>Happy <br>Customers</span>
               </div>
             </div>
@@ -411,7 +411,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text d-flex align-items-center">
-                <strong class="number" data-number="67">0</strong>
+                <strong class="number" data-number="65">0</strong>
                 <span>Total <br>Branches</span>
               </div>
             </div>
