--- a/templates/secondlayout.html
+++ b/templates/secondlayout.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Aliong Car Book</title>
+    <title>Aliong Car Rental</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="icon" href="static/images/Logo.png" type="image/png">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 
@@ -29,21 +31,29 @@
 
   <body>   
     <style>
-    .navbar-nav li {
-        margin-left: 15px; /* Adjust the margin as needed for spacing */
-    }
+      .nav-item.dropdown:hover .dropdown-menu {
+        display: block;
+      }
+      .dropdown-item:hover {
+          background-color: #01d28e; /* Change the color as per your preference */
+      }
+      .navbar-nav li {
+          display: flex;
+          justify-content: center;
+          margin-left: 15px;
+      }
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-dark py-4" id="ftco-navbar">
-        <div class="container justify-content-center">
-            <a class="navbar-brand" href="/">Aliong <span>Car</span>Book</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="oi oi-menu"></span> Menu
-            </button>
-        </div>
+      <div class="container justify-content-center">
+        <a class="navbar-brand" href="/">Aliong <span>Car</span> Rental</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="oi oi-menu"></span> Menu
+          </button>
+      </div>
 
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="ftco-nav">
+      <div class="container-fluid">
+          <div class="collapse navbar-collapse justify-content-center" id="ftco-nav">
             <ul class="navbar-nav">
 
             {% if homeactive == True %}
@@ -122,25 +132,28 @@
               {% endif %}
                 <a href="mybooking" class="nav-link">MyBooking</a></li>
             {% endif %}
-
-            </ul>
-          </div>
+          </ul>
         </div>
+      </div>
 
-        
-        <div class="container justify-content-center text-center">
-        {% if session.username %}
-            <h6 class="bg-dark aqua py-3 px-3 mb-0 rounded">
-            Welcome, {{session.username}} <br>
-            <a href="/logout" class="btn btn-danger mt-2">
+      
+      <div class="container justify-content-end text-center">
+        <div class="collapse navbar-collapse justify-content-center" id="ftco-nav">
+          {% if session.username %}
+            <h6 class="bg-secondary aqua py-3 px-3 mb-0 rounded">
+              Welcome, {{session.username}} <br>
+              <a href="/logout" class="btn btn-danger mt-2">
                 LOGOUT
-            </a>
+              </a>
             </h6>
-        {% else %}
-            <a class="navbar-brand btn btn-success" href="login">Login</a>
-            <a class="navbar-brand btn btn-primary" href="register">Register</a>
-        {% endif %}
-        </div>      
+          {% else %}
+            <div class="btn-container justify-content-center py-3">
+              <a class="btn-login btn btn-success" href="login">Login</a>
+              <a class="btn-regis btn" href="register">Register</a>
+            </div> 
+          {% endif %}
+        </div>  
+      </div>      
     </nav>
 
     {% block content %}
@@ -154,12 +167,12 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>book</span></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2"><a href="#" class="logo">Aliong Car<span> Rental</span></a></h2>
+              <p>Your trusted partner for car rental needs in Indonesia. Enjoy seamless booking, affordable rates, and excellent customer service.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="#" class="sos-icon"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="#" class="sos-icon"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="#" class="sos-icon"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -169,9 +182,8 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">About</a></li>
                 <li><a href="#" class="py-2 d-block">Services</a></li>
-                <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+                <li><a href="#" class="py-2 d-block">Cars Showcase</a></li>
+                <li><a href="#" class="py-2 d-block"></a></li>
               </ul>
             </div>
           </div>
@@ -192,9 +204,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Jl. Imam Bonjol Permai Blok A3/27, Karawaci, Kec. Karawaci, Tangerang, Indonesia</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 822 6372 8847 </span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">aliongrental@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -204,8 +216,8 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved - Kelompok 6 (Car Rental)</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved - Aliong Car Rental</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
